Revert "virtio: remove vsock support"
Commit c4719d3 dropped driver support for virtio-vsock because it was not being used.

Revert this commit because we want to introduce vsock support.

This revert does not add back the examples/aarch64/main.rs file as it is not needed.

Signed-off-by: Luigi Leonardi <leonardi@redhat.com>

--- a/virtio-drivers/Cargo.toml
+++ b/virtio-drivers/Cargo.toml
@@ -18,10 +18,12 @@ log = { workspace = true }
 bitflags = { workspace = true }
 enumn = "0.1.14"
 zerocopy = { workspace = true, features = ["derive"] }
+embedded-io = { version = "0.6.1", optional = true }
 
 [features]
-default = ["alloc"]
+default = ["alloc", "embedded-io"]
 alloc = ["zerocopy/alloc"]
+embedded-io = ["dep:embedded-io"]
 
 [lints]
 workspace = true
