kernel/vsock: introduce virtio-vsock support
Add a virtio-vsock wrapper around virtio-drivers. It provides blocking functions
for connect, send, recv, shutdown and force_shutdown.

To use it you need the `vsock` feature.

Signed-off-by: Luigi Leonardi <leonardi@redhat.com>

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -84,6 +84,7 @@ verus = ["verus_all", "verify_proof/noverify", "verify_external/noverify"]
 noverify = []
 virtio-drivers = ["dep:virtio-drivers"]
 block = []
+vsock = []
 
 [dev-dependencies]
 sha2 = { workspace = true, features = ["force-soft"] }
