kernel/vsock: introduce virtio-vsock support
Add a virtio-vsock wrapper around virtio-drivers. It provides blocking functions
for connect, send, recv and close.

There is also a VsockStream implemetation that offers Read and Write traits.

To use it you need both the `vsock` and the `virtio-drivers` features.

Signed-off-by: Luigi Leonardi <leonardi@redhat.com>

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -71,6 +71,7 @@ test.workspace = true
 
 [features]
 attest = ["dep:aes", "dep:base64", "dep:cocoon-tpm-crypto", "dep:cocoon-tpm-tpm2-interface", "dep:cocoon-tpm-utils-common", "dep:kbs-types", "dep:libaproxy", "dep:serde", "dep:serde_json"]
+vsock = []
 
 default = []
 enable-gdb = ["dep:gdbstub", "dep:gdbstub_arch"]
