--- a/aproxy/Cargo.toml
+++ b/aproxy/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.5", features = ["derive"] }
 libaproxy.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+vsock = "0.5.1"
 
 [lints]
 workspace = true
