--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "packit"]
 	path = packit
 	url = https://github.com/coconut-svsm/packit.git
+[submodule "coconut-alloc"]
+	path = coconut-alloc
+	url = https://github.com/luigix25/coconut-alloc.git
