--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -74,7 +74,7 @@ test.workspace = true
 attest = ["dep:aes", "dep:base64", "dep:cocoon-tpm-crypto", "dep:cocoon-tpm-tpm2-interface", "dep:cocoon-tpm-utils-common", "dep:kbs-types", "dep:libaproxy", "dep:serde", "dep:serde_json"]
 vsock = ["virtio-drivers"]
 
-default = []
+default = ["vsock"]
 enable-gdb = ["dep:gdbstub", "dep:gdbstub_arch"]
 vtpm = ["dep:libtcgtpm"]
 nosmep = []
