github/workflows: enable vhost support in QEMU build and install netcat
In preparation to vsock support, QEMU needs to be configured with vhost
support enabled. Without the flag `--enable-vhost-kernel`, QEMU would fail
to launch with error:
`qemu-system-x86_64: -device vhost-vsock-device,guest-cid=3: 'vhost-vsock-device' is not a valid device model name`

This flag is disabled by default because of `--without-default-features`

Add the flag to enable support for vsock in QEMU and install netcat

Signed-off-by: Nicola Ramacciotti <niko.ramak@gmail.com>

--- a/.github/workflows/qemu.yml
+++ b/.github/workflows/qemu.yml
@@ -98,6 +98,7 @@ jobs:
             --enable-kvm \
             --enable-slirp \
             --enable-strip \
+            --enable-vhost-kernel \
             --static \
             --disable-docs \
             --disable-user \
@@ -116,6 +117,9 @@ jobs:
 
       - name: Install TPM 2.0 Reference Implementation build dependencies
         run: sudo apt install -y build-essential cmake pkg-config
+
+      - name: Install netcat used by test-in-svsm for vsock tests
+        run: sudo apt install -y ncat
 
       - name: Build test
         run: make bin/coconut-test-qemu.igvm
