--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -25,26 +25,10 @@ elf.workspace = true
 syscall.workspace = true
 
 aes-gcm = { workspace = true, features = ["aes", "alloc"] }
-aes-kw = { workspace = true, optional = true }
 bitfield-struct.workspace = true
 bitflags.workspace = true
-cocoon-tpm-crypto = { workspace = true, features = [
-    "enable_arch_math_asm", "zeroize",
-    # Enable x86 rdseed based rng.
-    "enable_x86_64_rdseed",
-    # At least one of block cipher, mode and hash is needed,
-    # otherwise compilation will fail due to empty enums.
-    "aes", "cfb", "sha256", "sha384", "sha512",
-    "ecc", "ecdh", "ecdsa",
-    "ecc_nist_p224", "ecc_nist_p256",
-    "ecc_nist_p384", "ecc_nist_p521",
-], optional = true }
-cocoon-tpm-tpm2-interface = { workspace = true, optional = true }
-cocoon-tpm-utils-common = { workspace = true, optional = true }
-concat-kdf = { workspace = true, optional = true }
 igvm_defs = { workspace = true, features = ["unstable"] }
 intrusive-collections.workspace = true
-kbs-types = { workspace = true, optional = true, features = ["alloc"] }
 log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
 packit.workspace = true
 libtcgtpm = { workspace = true, optional = true }
@@ -64,7 +48,7 @@ verus_stub = { workspace = true }
 test.workspace = true
 
 [features]
-attest = ["dep:aes-kw", "dep:cocoon-tpm-crypto", "dep:cocoon-tpm-tpm2-interface", "dep:cocoon-tpm-utils-common", "dep:concat-kdf", "dep:kbs-types", "dep:libaproxy", "dep:serde", "dep:serde_json"]
+attest = []
 
 default = []
 enable-gdb = []
