--- a/verification/verus_stub/Cargo.toml
+++ b/verification/verus_stub/Cargo.toml
@@ -5,13 +5,11 @@ edition.workspace = true
 
 [dependencies]
 
-verus_builtin_macros = { workspace = true, optional = true }
-vstd = { workspace = true, optional = true }
 verus_macro_stub = { workspace = true, optional = true}
 
 [features]
 default = ["dep:verus_macro_stub"]
-disable = ["verus_builtin_macros", "vstd"]
+disable = []
 
 [lints]
 workspace = true
